# kairos

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CAUSALITY.md  HOW_IT_WORKS.md  PHILOSOPHY.md
scripts/: build_cpp.sh  make_readme_figures.py  reproduce.py  soul_check.py
src/bindings/: lob_bridge.cpp
src/cpp/: bench_rings.cpp  lockfree_ring.hpp  producer_demo.cpp  shm_lob.cpp  shm_lob.hpp
src/kairos/: __init__.py  cli.py
src/kairos/bridge/: __init__.py  causal_bus.py  execution_link.py  microstructure.py  microstructure_analyst.py  microstructure_tools.py  percept.py
src/kairos/loop/: __init__.py  cognitive_loop.py
src/kairos/perception/: __init__.py  bench.py  cli.py  real.py  schema.py  stream.py
src/kairos/perception/execution/: __init__.py  optimize.py  risk.py  simulator.py
src/kairos/perception/ingest/: __init__.py  bybit.py  capturer.py  orderbook.py  ring_bridge.py
src/kairos/perception/models/: __init__.py  embedder.py  numpy_backend.py
src/kairos/perception/regime/: __init__.py  cluster.py  evaluate.py  naming.py  predict.py
src/kairos/perception/strategy/: __init__.py  avellaneda.py  maker.py
src/kairos/perception/synthetic/: __init__.py  engine.py  generate.py
src/kairos/perception/tui/: __init__.py  dashboard.py
src/kairos/perception/web/: __init__.py  build.py  index.html
src/kairos/reasoning/agents/analysts/: fundamentals_analyst.py  market_analyst.py  news_analyst.py  sentiment_analyst.py  social_media_analyst.py
src/kairos/reasoning/agents/managers/: portfolio_manager.py  research_manager.py
src/kairos/reasoning/agents/researchers/: bear_researcher.py  bull_researcher.py
src/kairos/reasoning/agents/risk_mgmt/: aggressive_debator.py  conservative_debator.py  neutral_debator.py
src/kairos/reasoning/agents/trader/: trader.py
src/kairos/reasoning/agents/utils/: agent_states.py  agent_utils.py  core_stock_tools.py  fundamental_data_tools.py  macro_data_tools.py  market_data_validation_tools.py  memory.py  news_data_tools.py  prediction_markets_tools.py  rating.py  technical_indicators_tools.py
src/kairos/reasoning/dataflows/: _redact.py  alpha_vantage_common.py  alpha_vantage_stock.py  config.py  fred.py  interface.py  market_data_validator.py  polymarket.py  reddit.py  stockstats_utils.py  stocktwits.py  yfinance_news.py
src/kairos/reasoning/graph/: analyst_execution.py  checkpointer.py  conditional_logic.py  propagation.py  setup.py  signal_processing.py  trading_graph.py
src/kairos/reasoning/llm_clients/: anthropic_client.py
src/kairos/reasoning_cli/: announcements.py  main.py  utils.py
tests/bridge/: test_causal_bus.py  test_execution_link.py  test_microstructure.py
tests/loop/: test_cli_learned.py  test_cli_loop.py  test_cli_reason_soul.py  test_cognitive_loop.py  test_mypy_gate.py
tests/perception/: __init__.py  run_synthetic.py  test_bench.py  test_contract.py  test_determinism.py  test_generalization.py  test_ingest.py  test_native_ingest.py  test_native_pipeline.py  test_optimize.py  test_predict.py  test_real.py  test_scenarios.py  test_strategy.py  test_stream.py  test_web.py
tests/perception/red_team/: README.md  __init__.py  test_bridge_race.py  test_bridge_stress.py  test_execution_adversarial.py  test_ingest_adversarial.py  test_ring_bench.py
tests/perception/synthetic/: __init__.py  test_pipeline.py
tests/reasoning/: conftest.py  test_alpha_vantage_hardening.py  test_analyst_execution.py  test_anthropic_effort.py  test_api_key_env.py  test_bedrock_provider.py  test_capabilities.py  test_checkpoint_resume.py  test_cli_config_precedence.py  test_cli_env_skip.py  test_cli_symbol_handling.py  test_crypto_asset_mode.py  test_dataflows_config.py  test_date_boundaries.py  test_deepseek_reasoning.py  test_env_overrides.py  test_fred.py  test_google_api_key.py  test_google_thinking_level.py  test_i18n_coverage.py  test_instrument_identity.py  test_market_data_validator.py  test_market_toolnode.py  test_memory_log.py  test_microstructure_integration.py  test_minimax.py  test_model_validation.py  test_news_lookahead.py  test_no_data_handling.py  test_ollama_base_url.py  test_openai_compatible_provider.py  test_openai_reasoning_effort.py  test_openai_responses_base_url.py  test_openrouter_model_select.py  test_polymarket.py  test_propagate_checkpoint_lifecycle.py  test_provider_registry.py  test_reddit_fallback.py  test_reporting.py  test_safe_ticker_component.py  (+13 more)
